--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -49,7 +49,7 @@
             {
                 "@context": "http://schema.org",
                 "@type": "Website",
-                "publisher": "{{config.cart_title}}",
+                "publisher": "Indzawocoutore",
                 "url": "{{config.base_url}}"
             }
         </script>
@@ -66,7 +66,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">{{config.cart_title}}</a>
+					<a class="navbar-brand" href="/">Indzawocoutore</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -91,7 +91,7 @@
 		{{#if show_footer}}
 			<footer class="footer">
 				<div class="container">
-					<p class="text-muted">Powered by ExpressCart</p>
+					<p class="text-muted">Powered by Schoolspun.com</p>
 				</div>
 			</footer>
 		{{/if}}
