--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>{{config.cart_title}} - {{title}}</title>
+		<title>indzawocoutore - {{title}}</title>
 	    <meta charset="utf-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
