--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -1,6 +1,6 @@
 <div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 50px">
 	<form class="form-signin" action="/admin/user/insert" method="post" role="form" data-toggle="validator">
-		<h2 class="form-signin-heading text-center">ExpressCart Setup</h2>
+		<h2 class="form-signin-heading text-center">Admin Setup,your website is almost ready</h2>
         <div class="form-group">
 	    	<label for="users_name">Users name *</label>
 	    	<input type="text" class="form-control" id="users_name" name="users_name" placeholder="Users name" required>
@@ -17,6 +17,6 @@
 		    <label for="frm_user_password_confirm">Password confirm *</label>
 		    <input type="password" data-match="#user_password" placeholder="Confirm password" class="form-control" id="frm_user_password_confirm" name="frm_user_password_confirm" required>
 	  	</div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Complete setup</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Complete setup and login to upload products</button>
 	</form>
 </div>
