--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>indzawocoutore - {{title}}</title>
+		<title>{{config.cart_title}} - {{title}}</title>
 	    <meta charset="utf-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -49,7 +49,7 @@
             {
                 "@context": "http://schema.org",
                 "@type": "Website",
-                "publisher": "Indzawocoutore",
+                "publisher": "{{config.cart_title}}",
                 "url": "{{config.base_url}}"
             }
         </script>
@@ -91,7 +91,7 @@
 		{{#if show_footer}}
 			<footer class="footer">
 				<div class="container">
-					<p class="text-muted">Powered by Schoolspun.com</p>
+					<p class="text-muted">Powered by Schoolspun</p>
 				</div>
 			</footer>
 		{{/if}}
